@@ -9,6 +9,7 @@ Copyright (C) 2005, 2006, 2007, 2008  Ludovic Courtès <ludo@gnu.org>
 * New in Skribilo 0.9.2
 
 ** Improved configure-time diagnostics
+** `skribilo' now displays a call stack trace upon error when possible
 
 * New in Skribilo 0.9.1
 
